--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
     "author": "MrMonkey42",
     "license": "MIT",
     "dependencies": {
+        "cors": "^2.8.5",
         "dotenv": "^16.3.1",
-        "express": "^4.18.2",
-        "http-proxy-middleware": "^2.0.6"
+        "express": "^4.18.2"
     },
     "devDependencies": {
         "nodemon": "^3.0.1"
